--- a/PA1_template.html
+++ b/PA1_template.html
@@ -59,8 +59,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <div id="loading-and-preprocessing-the-data" class="section level2">
 <h2>Loading and preprocessing the data</h2>
 <pre class="r"><code>options(scipen = 2, digits = 2)</code></pre>
-<pre class="r"><code>options(scipen = 2, digits = 2)
-rawdata&lt;-read.csv(&quot;activity.csv&quot;)
+<pre class="r"><code>rawdata&lt;-read.csv(&quot;activity.csv&quot;)
 data&lt;-rawdata
 data$date&lt;-as.Date(data$date)</code></pre>
 </div>
